@@ -2,7 +2,7 @@ Package: bartMachine
 Type: Package
 Title: Bayesian Additive Regression Trees
 Version: 1.0.2
-Date: 2013-12-8
+Date: 2014-2-4
 Author: Adam Kapelner and Justin Bleich
 Maintainer: Adam Kapelner <kapelner@wharton.upenn.edu>
 Description: An advanced implementation of Bayesian Additive Regression Trees with expanded features for data analysis and visualization
