@@ -1,5 +1,5 @@
 ##package constants
-VERSION = "1.0b"
+VERSION = "1.0.2"
 JAR_DEPENDENCIES = c("bart_java.jar", "commons-math-2.1.jar", "trove-3.0.3.jar", "junit-4.10.jar")
 
 ##color array 
