@@ -2,7 +2,7 @@
 ##check BART error assumptions via plot
 check_bart_error_assumptions = function(bart_machine, hetero_plot = "yhats"){
   	if (is_bart_destroyed(bart_machine)){
-    	stop("This BART machine has been destroyed. Please recreate.")
+    	stop("This bartMachine model has been destroyed. Please recreate.")
   	}
   
 	if (!(hetero_plot %in% c("ys", "yhats"))){
@@ -36,7 +36,7 @@ check_bart_error_assumptions = function(bart_machine, hetero_plot = "yhats"){
 ##private function for plotting tree depths
 plot_tree_depths = function(bart_machine){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
 	
 	tree_depths_after_burn_in = get_tree_depths(bart_machine)
@@ -75,7 +75,7 @@ get_tree_depths = function(bart_machine){
 #private function for plotting number of nodes in the trees
 plot_tree_num_nodes = function(bart_machine){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
 	
 	tree_num_nodes_and_leaves_after_burn_in = get_tree_num_nodes_and_leaves(bart_machine)
@@ -113,7 +113,7 @@ get_tree_num_nodes_and_leaves = function(bart_machine){
 #private function for plotting the MH acceptance proportions by core
 plot_mh_acceptance_reject = function(bart_machine){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
 	
 	mh_acceptance_reject = get_mh_acceptance_reject(bart_machine)
@@ -162,7 +162,7 @@ get_mh_acceptance_reject = function(bart_machine){
 #plot y vs yhat for training or test data
 plot_y_vs_yhat = function(bart_machine, Xtest = NULL, ytest = NULL, credible_intervals = FALSE, prediction_intervals = FALSE, interval_confidence_level = 0.95){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
   
 	if( (!bart_machine$run_in_sample) & (is.null(Xtest) | is.null(ytest)) ){
@@ -249,7 +249,7 @@ plot_y_vs_yhat = function(bart_machine, Xtest = NULL, ytest = NULL, credible_int
 ##get sigsqs and plot a histogram, if desired
 get_sigsqs = function(bart_machine, after_burn_in = T, plot_hist = F, plot_CI = .95, plot_sigma = F){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}	
 	if (bart_machine$pred_type == "classification"){
 		stop("There are no sigsq's for classification.")
@@ -294,7 +294,7 @@ get_sigsqs = function(bart_machine, after_burn_in = T, plot_hist = F, plot_CI = 
 #private function for plotting convergence diagnostics for sigma^2
 plot_sigsqs_convergence_diagnostics = function(bart_machine){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}	
 	if (bart_machine$pred_type == "classification"){
 		stop("There are no convergence diagnostics for classification.")
@@ -336,7 +336,7 @@ plot_sigsqs_convergence_diagnostics = function(bart_machine){
 ##function for investigating variable inclusion proportions
 investigate_var_importance = function(bart_machine, type = "splits", plot = TRUE, num_replicates_for_avg = 5, num_trees_bottleneck = 20, num_var_plot = Inf, bottom_margin = 10){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}	
 
 	var_props = array(0, c(num_replicates_for_avg, bart_machine$p))
@@ -393,7 +393,7 @@ investigate_var_importance = function(bart_machine, type = "splits", plot = TRUE
 ##user function calling private plotting methods
 plot_convergence_diagnostics = function(bart_machine, plots = c("sigsqs", "mh_acceptance", "num_nodes", "tree_depths")){
   if (is_bart_destroyed(bart_machine)){
-  	stop("This BART machine has been destroyed. Please recreate.")
+  	stop("This bartMachine model has been destroyed. Please recreate.")
   }
   
   if(length(plots) > 2){
@@ -500,7 +500,7 @@ interaction_investigator = function(bart_machine, plot = TRUE, num_replicates_fo
 			ylab = "Relative Importance", 
 			col = "gray",#rgb(0.39, 0.39, 0.59),
 			ylim = c(ylim_bottom, max(avg_counts + moe)),
-#			main = paste("Interactions in BART Model Averaged over", num_replicates_for_avg, "Replicates"),
+#			main = paste("Interactions in bartMachine Model Averaged over", num_replicates_for_avg, "Replicates"),
 			xpd = FALSE #clips the bars outside of the display region (why is this not a default setting?)
 		)
 		if (!is.na(sd_counts[1])){
@@ -518,7 +518,7 @@ interaction_investigator = function(bart_machine, plot = TRUE, num_replicates_fo
 ##partial dependence plot
 pd_plot = function(bart_machine, j, levs = c(0.05, seq(from = 0.10, to = 0.90, by = 0.10), 0.95), lower_ci = 0.025, upper_ci = 0.975){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
 	if (class(j) == "numeric" && (j < 1 || j > bart_machine$p)){
 		stop(paste("You must set j to a number between 1 and p =", bart_machine$p))
@@ -576,7 +576,7 @@ pd_plot = function(bart_machine, j, levs = c(0.05, seq(from = 0.10, to = 0.90, b
 ##plot and invisibly return out-of-sample RMSE by the number of trees
 rmse_by_num_trees = function(bart_machine, tree_list = c(5, seq(10, 50, 10), 100, 150, 200), in_sample = FALSE, plot = TRUE, holdout_pctg = 0.3, num_replicates = 4){
 	if (is_bart_destroyed(bart_machine)){
-		stop("This BART machine has been destroyed. Please recreate.")
+		stop("This bartMachine model has been destroyed. Please recreate.")
 	}
 	if (bart_machine$pred_type == "classification"){
 		stop("This function does not work for classification.")
